--- a/Presentacion/css/estilos.css
+++ b/Presentacion/css/estilos.css
@@ -6,14 +6,12 @@ body{
     position: relative;
     width: 65px;
     height: 45px;
-    top: 10px;
     left: 5px;
 }
 .user{
     position: relative;
     width: 45px;
     height: 45px;
-    top: 10px;
     left: 490px;
 }
 .site-header{
@@ -56,13 +54,6 @@ header{
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-
-
-/*.navegacion{
-	width: 1000px;
-	margin: 30px auto;
-	background: #fff;
-}*/
 
 .navegacion-principal ul{
 	list-style: none;
@@ -108,4 +99,12 @@ header{
 .menu li:hover .submenu{
 	visibility: visible;
 	opacity: 1;
+}
+.titulo{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #6199D1;
+    text-align: center;
+}
+.parrafo{
+    text-align: justify;
 }
