--- a/Presentacion/css/estilos.css
+++ b/Presentacion/css/estilos.css
@@ -1,4 +1,5 @@
 /** ESTE ARCHIVO CONTIENE TODOS LOS ESTILOS DE LA APLICACION NUESTRA FAMILIA**/
+  
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -17,20 +18,42 @@ body{
 .site-header{
     padding: 50px 0;
 }
-.contenedor{
-    max-width: 1700px;
-    margin: 0 auto;
-}
+
 header{
     width: 100%;
 }
 
+/** Globales **/
+img{
+    max-width: 100%; /** Declaracion para un solo tamaño de imagenes **/
+}
+
+.contenedor{
+    width: 95%;
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+h1{
+    font-size: 3.8rem;
+    color: #6199D1;
+}
+
+
+/** Utilidades **/
+.seccion{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.centrar-texto{
+    text-align: center;
+}
 /**Navegacion**/
 .barra{
     background-color: #6199D1;
 }
 .navegacion-principal a{
-    
     text-decoration: none;
     text-emphasis-color: white;
     font-size: 22px;
@@ -44,15 +67,6 @@ header{
         display: inline-block;
         margin-right: 20px;
     }
-}
-
-
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
 }
 
 .navegacion-principal ul{
@@ -100,11 +114,20 @@ header{
 	visibility: visible;
 	opacity: 1;
 }
-.titulo{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #6199D1;
-    text-align: center;
-}
+
 .parrafo{
     text-align: justify;
+}
+
+/** Especialidades **/
+
+.contenido-especialidad{
+    padding: 2rem;
+}
+.contenido-especialidad h3{
+    margin: 0;
+}
+.uno{
+    font-family:'Courier New', Courier, monospace;
+    
 }
