--- a/Vista/Recursos/css/estilos.css
+++ b/Vista/Recursos/css/estilos.css
@@ -27,6 +27,96 @@ margin:auto;
 header{
     width: 100%;
 }
+/*login*/
+.fondo-login{   
+    background-image: url("/Vista/Recursos/img/portada-login.jpg");
+}
+.img-login{
+    height: 50px;
+    width: 90px;
+    right: 35%;
+    position: absolute;
+    top: 10%;
+}
+.login-box {
+    width: 320px;
+    height: 420px;
+    background: #98cdffea;
+    color: rgb(0, 0, 0);
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+    /*border: 2px solid #000000;*/
+    border-radius: 10px;
+  }
+  
+  .login-box .avatar {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+  }
+  
+  .login-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+  }
+  
+  .login-box label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+  }
+  
+  .login-box input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .login-box input[type="text"], .login-box input[type="password"] {
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: rgb(3, 3, 3);
+    font-size: 16px;
+    border-radius: 7px;
+  }
+  
+  .login-box input[type="submit"] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #b80f22;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+  }
+  
+  .login-box input[type="submit"]:hover {
+    cursor: pointer;
+    background: #69aff0;
+    color: #000;
+  }
+  
+  .login-box a {
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: darkgrey;
+  }
+  
+  .login-box a:hover {
+    color: #fff;
+  }
 
 /** Globales **/
 img{
@@ -39,7 +129,8 @@ img{
     margin: 0 auto;
 }
 
-h1{
+
+.titulo{
     font-size: 3.8rem;
     color: #6199D1;
 }
@@ -135,4 +226,10 @@ h1{
 .uno{
     font-family:'Courier New', Courier, monospace;
     
+}
+.alineacion{
+    text-align: center;
+}
+.fondo{
+    color: #209fe9;
 }
