--- a/Vista/Recursos/css/estilos.css
+++ b/Vista/Recursos/css/estilos.css
@@ -15,10 +15,6 @@ body{
     height: 45px;
     left: 120px;
 }
-.img-especialidad{
-    display:block;
-margin:auto;
-}
 
 .site-header{
     padding: 50px 0;
@@ -123,16 +119,16 @@ img{
     max-width: 100%; /** Declaracion para un solo tamaño de imagenes **/
 }
 
-.contenedor{
-    width: auto;
-    max-width: 120rem;
-    margin: 0 auto;
-}
-
-
 .titulo{
     font-size: 3.8rem;
     color: #6199D1;
+}
+
+.contenedor{
+    border: 1px solid #b5b5b5;
+    background-color: #f5f5f5;
+    margin-bottom: 2rem;
+    padding: 2rem;
 }
 
 
@@ -156,13 +152,6 @@ img{
     display: block;
     text-align: center;
     
-}
-
-@media (min-width: 768px) {
-    .navegacion-principal a{
-        display: inline-block;
-        margin-right: 20px;
-    }
 }
 
 .navegacion-principal ul{
@@ -212,17 +201,17 @@ img{
 }
 
 .parrafo{
-    text-align: justify;
+    text-align: justify;   
+    font-size: 1.3rem;
 }
 
 /** Especialidades **/
+.img-especialidad{
+    display:block;
+    margin:auto;
+}
 
-.contenido-especialidad{
-    padding: 2rem;
-}
-.contenido-especialidad h3{
-    margin: 0;
-}
+
 .uno{
     font-family:'Courier New', Courier, monospace;
     
@@ -232,4 +221,15 @@ img{
 }
 .fondo{
     color: #209fe9;
+}
+
+/** Footer **/
+.site-footer{
+    background-color: #333333;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+.site-footer p{
+    color: #ffffff;
 }
