--- a/Vista/Recursos/css/estilos.css
+++ b/Vista/Recursos/css/estilos.css
@@ -16,14 +16,10 @@ body{
     left: 120px;
 }
 
-.site-header{
-    padding: 50px 0;
-}
-
 header{
     width: 100%;
 }
-/*login*/
+/** Login **/
 .fondo-login{   
     background-image: url("/Vista/Recursos/img/portada-login.jpg");
 }
@@ -115,22 +111,41 @@ header{
   }
 
 /** Globales **/
-img{
-    max-width: 100%; /** Declaracion para un solo tamaño de imagenes **/
-}
-
 .titulo{
     font-size: 3.8rem;
     color: #6199D1;
 }
-
 .contenedor{
+    width: 100%;
+    max-width: 120rem;
+    margin: 0 auto;
+    border: 1.5px solid #b5b5b5;
+}
+/**.contenedor{
     border: 1px solid #b5b5b5;
     background-color: #f5f5f5;
     margin-bottom: 2rem;
     padding: 2rem;
-}
+}**/
 
+/** Botones **/
+.boton{
+    color: #ffffff;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 1.5rem;
+    padding: 1rem 1.8rem;
+    margin-top: 1.8rem;
+    display: inline-block;
+    text-align: center;
+    border: none;
+    display: block;
+    flex: 0 0 100%;
+
+}
+.boton-celeste{
+    background-color: #69aff0;
+}
 
 /** Utilidades **/
 .seccion{
@@ -140,6 +155,10 @@ img{
 
 .centrar-texto{
     text-align: center;
+}
+.contenido-centrado{
+    max-width: 800px;
+    margin: 0 auto;
 }
 /**Navegacion**/
 .barra{
@@ -210,7 +229,11 @@ img{
     display:block;
     margin:auto;
 }
-
+.img-contacto{
+    width: 100%;
+    display: block;
+    margin: auto;
+}
 
 .uno{
     font-family:'Courier New', Courier, monospace;
@@ -232,4 +255,47 @@ img{
 }
 .site-footer p{
     color: #ffffff;
+}
+
+/** Paginas internas **/
+/** Contactos **/
+.contacto p{
+    font-size: 1.2rem;
+    color: #4f4f4f;
+    margin: 2rem 0 0 0;
+}
+legend{
+    font-size: 1.5rem;
+    color: #4f4f4f;
+}
+label{
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+}
+input:not([type="submit"]), textarea, select{
+    padding: 1rem;
+    display: block;
+    width: 100%;
+    background-color: #e1e1e1;
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 1rem;
+}
+input[type="radio"]{
+    width: auto;
+    margin: 0;
+}
+select{
+    -webkit-appearance: none;
+    appearance: none;
+}
+textarea{
+    height: 20rem;
+}
+.forma-contacto{
+    max-width: 30rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
