--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,92 +1,91 @@
 .caja {
-    margin:20px auto 40px auto;	
-    border:1px solid #d9d9d9;
-    height:30px;
-    overflow: hidden;
-    width: 230px;
-    position:relative;
+  margin:20px auto 40px auto; 
+  border:1px solid #d9d9d9;
+  height:30px;
+  overflow: hidden;
+  width: 230px;
+  position:relative;
 }
 select {
-    background: transparent;
-    border: none;
-    font-size: 14px;
-    height: 30px;
-    padding: 5px;
-    width: 250px;
+  background: transparent;
+  border: none;
+  font-size: 14px;
+  height: 30px;
+  padding: 5px;
+  width: 250px;
 }
 
 select:focus{ 
-  outline: none;
+outline: none;
 }
- 
- 
+
+
 .caja::after{
-  content:"\025be";
-  display:table-cell;
-  padding-top:7px;
-  text-align:center;
-  width:30px;
-  height:30px;
-  background-color:#d9d9d9;
-  position:absolute;
-  top:0;
-  right:0px;	
-  pointer-events: none;
+content:"\025be";
+display:table-cell;
+padding-top:7px;
+text-align:center;
+width:30px;
+height:30px;
+background-color:#d9d9d9;
+position:absolute;
+top:0;
+right:0px;  
+pointer-events: none;
 }
 
 /* ESTILOS PARA IMAGENES */
 .img{
-  text-align: center;
+text-align: center;
 }
 
 .img-especialidades{
-  width: 350px;
-  height: 200px;
+width: 350px;
+height: 200px;
 }
 
 /* ESTILOS PARA LOS TITULOS */
 .titulo{
-    font-size: 40px;
-    text-align: center;
-    color: #4a99ce;
+  font-size: 40px;
+  text-align: center;
+  color: #4a99ce;
 }
 
 .titulo1{
-    font-size: 30px;
-    text-align: center;
+  font-size: 30px;
+  text-align: center;
 }
 
+/* ESTILOS PAGINA CONTACTO*/ 
+.centrar-texto-contac{
+text-align: center;
+font-size: medium;
+font-family: cursive;
+}
+
+p{
+  text-align: center;
+  font-size: large;
+}
 
 /* ESTILOS PARA LOS PARRAFOS Y COLUMNAS */
 .parrafo{
-     font-size: 21px;
-     text-align: justify;
-     line-height: normal;
-}
-
-.columna {
-    width:33.3%;
-    float:left;
-  }
-  
-@media (max-width: 500px) {  
-  .columna {
-    width:auto;
-    float:none;
-  }  
+   font-size: 21px;
+   text-align: justify;
+   line-height: normal;
 }
 
 /* ESTILOS GOOGLE-MAPS */
 .google-maps {
-    position: relative;
-    padding-bottom: 75%; 
-    height: 0;
-    overflow: hidden;    
+  position: relative;
+  padding-bottom: 75%; 
+  height: 0;
+  overflow: hidden;    
 }
 .google-maps iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100% ;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
