--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -255,10 +255,11 @@ a:focus {
   background-color: transparent;
   background-image: none;
   padding: 15px 15px;
-  font-family: fontAwesome;
+  /*font-family: fontAwesome;*/
+  font-family: Font Awesome/ 5 Free; /* cjr */
 }
 .main-header .sidebar-toggle:before {
-  content: "\f0c9";
+  content: "\f0c9"; /* cjr */
 }
 .main-header .sidebar-toggle:hover {
   color: #fff;
